modify kakaomap size

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <label for="deathcheck">사망자 발생지역</label>
                 </div>
             </div>
-            <div id="map" style="width: 800px; height: 600px;"></div>
+            <div id="map" style="width: 90%; height: 700px;"></div>
             <div class="color-info">
                 <div class="dam">
                     댐 개방시 위험지역
@@ -61,6 +61,7 @@
                 ※ 대청댐 개방시 당일 1200m<sup>3</sup>/s (초당 약 1200톤 방류) 이상 방류예정이고 서해안 밀물일 경우 신고폭주 우려
             </div>
             <div class="prob-caution">
+                ※ 예측확률이 20% 미만인 곳은 색 표시하지 않음 <br>
                 ※ 예측지역과 실제 출동지역이 다를 수 있음
             </div>
             <div class="area-section">
@@ -78,7 +79,7 @@
             <div class="logo">
                 <img id="logo_box" class="fire_logo" src="./web_data/fire_logo.svg">
                 <div class="domain">충청남도소방본부</div>
-                <div id="logo_box" class="tel">문의: 041-830-0335</div>
+                <div id="logo_box" class="tel">문의: 041-360-0335</div>
             </div>
         </div>
     </body>
